# fastapi

./: .gitignore  abcd.py
cdk/: cdk.json  package-lock.json  package.json
cdk/lib/: lambda-fastapi.ts
python/: .gitignore  pyproject.toml
python/app/: configs.py  database.py  main.py  models.py
python/app/api/: __init__.py
python/app/api/user/: __init__.py  crud.py  router.py  schema.py
