[tool.poetry]
name = "python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.22.0"
fastapi = "^0.95.2"
mangum = "^0.17.0"
SQLAlchemy = "^2.0.15"
pymysql = "^1.0.3"
python-dotenv = "^1.0.0"
requests = "^2.26.0"
pydantic = "^1.10.8"
python-multipart = "^0.0.6"
python-jose = "^3.3.0"
passlib = "^1.7.4"
bcrypt = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
